Added swagger docs for the remaining endpoints
