# controllers/orderscontroller.go
@@ -18,9 +18,14 @@ type OrderController struct {
 	OrderRepository  *orders.MariaDBOrderRepository
 }
 
-// The request body for updating the status of an order
+// The request body for updating the status of an order. One of "delivered" or "canceled".
 type OrderUpdateRequest struct {
-	Status string
+	Status string `json:"status"`
+}
+
+// Indicates the status of an order
+type OrderStatusResponse struct {
+	Status string `json:"status"`
 }
 
 // Metadata about the order that was placed
@@ -31,13 +36,18 @@ type CreateOrderResponse struct {
 	OrderId         string `json:"orderId"`
 }
 
+// Indicates the address of the owner of the delivery token
+type TokenOwnerResponse struct {
+	Owner string `json:"owner" format:"address"`
+}
+
 // Error response from the API
 type ApiError struct {
 	Error string `json:"error"`
 }
 
-// PingExample godoc
-// @Summary      ping example
+// CreateOrder godoc
+// @Summary      Create order
 // @Description  Places an order that can later be delivered
 // @Tags         order
 // @Accept       json
@@ -56,14 +66,8 @@ func (_Controller *OrderController) CreateOrder(ctx *gin.Context) {
 	}
 
 	itemId := ctx.Query("itemId")
-	if len(itemId) == 0 {
-		ctx.JSON(400, gin.H{
-			"error": "itemId was not given",
-		})
-		return
-	}
 
-	// the user who is allowed to receive the shipment
+	// the customer who is allowed to receive the shipment
 	userAddress := ctx.Query("buyerAddress")
 
 	// make up a price since there is no database of inventory
@@ -75,7 +79,9 @@ func (_Controller *OrderController) CreateOrder(ctx *gin.Context) {
 		userAddress)
 
 	if err != nil {
-		errorResponse(ctx, 500, err.Error())
+		ctx.JSON(500, ApiError{
+			Error: err.Error(),
+		})
 		return
 	}
 
@@ -91,19 +97,89 @@ func (_Controller *OrderController) CreateOrder(ctx *gin.Context) {
 
 	err = _Controller.OrderRepository.CreateOrder(order)
 	if err != nil {
-		errorResponse(ctx, 500, "Error writing order to database")
+		ctx.JSON(500, ApiError{
+			Error: "Error writing order to database",
+		})
+	} else {
+		ctx.JSON(200, CreateOrderResponse{
+			Address:         *address,
+			TokenId:         tokenId.String(),
+			ContractAddress: *address,
+			OrderId:         order.OrderId,
+		})
+	}
+}
+
+// DeliverOrder  godoc
+// @Summary      Update order status
+// @Description  This action changes the status of an order, either by accepting delivery or canceling it
+// @Tags         order
+// @Accept       json
+// @Produce      json
+// @Param        request        body   OrderUpdateRequest true  "Indicates the status of the order. One of ('canceled', 'delivered')"
+// @Param        customerKey    query  string             false "If this is a delivery, the delivery recipient's private key (not a good idea in real life!)"
+// @Param        orderId        path   string             true  "the ID of the order being updated"
+// @Success      200  {object}  OrderStatusResponse
+// @Failure      400  {object}  ApiError
+// @Failure      404  {object}  ApiError
+// @Failure      500  {object}  ApiError
+// @Router       /order/{orderId} [post]
+func (_Controller *OrderController) UpdateOrderStatus(ctx *gin.Context) {
+	var req OrderUpdateRequest
+	ctx.BindJSON(&req)
+
+	if strings.EqualFold(req.Status, "delivered") {
+		_Controller.deliverOrder(ctx)
+	} else if strings.EqualFold(req.Status, "canceled") {
+		_Controller.cancelOrder(ctx)
+	} else {
+		ctx.JSON(400, ApiError{
+			Error: "Invalid status. Expected 'delivered' or 'canceled'",
+		})
+	}
+}
+
+// Determines who currently owns the deliver token - the vendor or the customer.
+// Returns the owner's address.
+
+// GetTokenOwner godoc
+// @Summary      Get the current owner of the delivery contract token
+// @Description  Determines who currently owns the deliver token - the vendor or the customer.
+// @Description  This looks up the contract in the blockchain rather than reading the status from the database.
+// @Tags         order
+// @Accept       json
+// @Produce      json
+// @Param        orderId        path   string    true  "the ID of the order being updated"
+// @Success      200  {object}  TokenOwnerResponse
+// @Failure      400  {object}  ApiError
+// @Failure      404  {object}  ApiError
+// @Failure      500  {object}  ApiError
+// @Router       /order/{orderId}/owner [get]
+func (_Controller *OrderController) GetDeliveryTokenOwner(ctx *gin.Context) {
+
+	orderId := ctx.Param("orderId")
+	order, _ := _Controller.OrderRepository.GetOrder(orderId)
+	if order == nil {
+		orderNotFoundResponse(ctx, orderId)
 		return
 	}
 
-	ctx.JSON(200, CreateOrderResponse{
-		Address:         *address,
-		TokenId:         tokenId.String(),
-		ContractAddress: *address,
-		OrderId:         order.OrderId,
-	})
+	owner, err := contract.GetOwner(order.TokenAddress, _Controller.ServerPrivateKey)
+
+	if err != nil {
+		ctx.JSON(500, ApiError{
+			Error: err.Error(),
+		})
+	} else {
+		ctx.JSON(200, TokenOwnerResponse{
+			Owner: owner,
+		})
+	}
 }
 
-func (_Controller *OrderController) DeliverOrder(ctx *gin.Context) {
+// Delivers the order to the customer. This is represented by transferring the token from the vendor to
+// the customer, and transferring Ether from the customer to the vendor to pay for shipping.
+func (_Controller *OrderController) deliverOrder(ctx *gin.Context) {
 	if !validateArgs(ctx, "customerKey") {
 		return
 	}
@@ -119,7 +195,9 @@ func (_Controller *OrderController) DeliverOrder(ctx *gin.Context) {
 
 	order, err := _Controller.OrderRepository.GetOrder(orderId)
 	if err != nil {
-		errorResponse(ctx, 500, err.Error())
+		ctx.JSON(500, ApiError{
+			Error: err.Error(),
+		})
 		return
 	} else if order == nil || order.Delivered {
 		orderNotFoundResponse(ctx, orderId)
@@ -129,42 +207,22 @@ func (_Controller *OrderController) DeliverOrder(ctx *gin.Context) {
 	// buy the token from the vendor, thereby accepting delivery of the package
 	err = contract.BuyNFT(order.TokenAddress, order.TokenId, customerPrivateKey, _Controller.NodeUrl)
 	if err != nil {
-		errorResponse(ctx, 500, err.Error())
+		ctx.JSON(500, ApiError{
+			Error: err.Error(),
+		})
 		return
 	}
 
 	_Controller.OrderRepository.MarkOrderDelivered(orderId)
 
-	ctx.JSON(200, gin.H{
-		"status": "delivered",
+	ctx.JSON(200, OrderStatusResponse{
+		Status: "delivered",
 	})
 
 	return
 }
 
-// Determines who currently owns the deliver token - the vendor or the customer.
-// Returns the owner's address.
-func (_Controller *OrderController) GetDeliveryTokenOwner(ctx *gin.Context) {
-
-	orderId := ctx.Param("orderId")
-	order, _ := _Controller.OrderRepository.GetOrder(orderId)
-	if order == nil {
-		orderNotFoundResponse(ctx, orderId)
-		return
-	}
-
-	owner, err := contract.GetOwner(order.TokenAddress, _Controller.ServerPrivateKey)
-
-	if err != nil {
-		errorResponse(ctx, 500, err.Error())
-	} else {
-		ctx.JSON(200, gin.H{
-			"owner": owner,
-		})
-	}
-}
-
-func (_Controller *OrderController) CancelOrder(ctx *gin.Context) {
+func (_Controller *OrderController) cancelOrder(ctx *gin.Context) {
 	orderId := ctx.Param("orderId")
 	order, _ := _Controller.OrderRepository.GetOrder(orderId)
 	if order == nil {
@@ -174,10 +232,17 @@ func (_Controller *OrderController) CancelOrder(ctx *gin.Context) {
 
 	err := contract.BurnContract(order.TokenAddress, _Controller.ServerPrivateKey)
 	if err != nil {
-		errorResponse(ctx, 500, "Failed to cancel the order")
+		ctx.JSON(500, ApiError{
+			Error: "Failed to cancel the order",
+		})
 	}
+
+	ctx.JSON(200, OrderStatusResponse{
+		Status: "canceled",
+	})
 }
 
+// Ensures all of the query parameters are present in the request
 func validateArgs(ctx *gin.Context, args ...string) bool {
 	var sb strings.Builder
 
@@ -195,18 +260,16 @@ func validateArgs(ctx *gin.Context, args ...string) bool {
 	}
 
 	if !valid {
-		errorResponse(ctx, 400, sb.String())
+		ctx.JSON(400, ApiError{
+			Error: sb.String(),
+		})
 		return false
 	}
 	return true
 }
 
-func errorResponse(ctx *gin.Context, statusCode int, message string) {
-	ctx.JSON(statusCode, gin.H{
-		"error": message,
-	})
-}
-
 func orderNotFoundResponse(ctx *gin.Context, orderId string) {
-	errorResponse(ctx, 404, fmt.Sprintf("Order ID [%s] does not exist", orderId))
+	ctx.JSON(404, ApiError{
+		Error: fmt.Sprintf("Order ID [%s] does not exist", orderId),
+	})
 }
